# Minecraft-Virtual-Intelligence

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  perception.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_env.py
.github/actions/install_requirements/: action.yml
.github/workflows/: gradle-build.yml  pre-commit.yml  pytest.yml
MineAI/: run_env.py  utils.py
MineAI/affector/: affector.py
MineAI/agent/: agent.py
MineAI/learning/: algorithm.py  ppo.py
MineAI/memory/: buffer.py  trajectory.py
MineAI/perception/: perception.py  visual.py
MineAI/reasoning/: critic.py
config_templates/: config.yaml
examples/: run_env.py  run_ppo.py  visualize_graph.py
forge/: build.gradle  changelog.txt  gradle.properties
forge/src/main/java/com/example/examplemod/: Config.java  ExampleMod.java  MviMod.java
forge/src/main/java/com/mvi/mvimod/: ActionState.java  ClientEventHandler.java  Config.java  DataBridge.java  MviMod.java  NetworkHandler.java  Observation.java
mvi/: config.py  engine.py  env.py  monitoring.py  run_env.py  utils.py
mvi/affector/: affector.py
mvi/agent/: agent.py
mvi/learning/: algorithm.py  icm.py  ppo.py  td.py
mvi/memory/: trajectory.py
mvi/monitoring/: event.py  event_bus.py
mvi/monitoring/callbacks/: tensorboard.py
mvi/monitoring/schema/: env_step.py  event.py
mvi/perception/: visual.py
mvi/reasoning/: critic.py  dynamics.py
notebooks/: test.ipynb  testing.ipynb
scripts/: test_env.py
templates/: config.yaml
tests/: helper.py  test_config.py  test_utils.py
tests/affector/: test_affector.py
tests/agent/: test_agent.py
tests/learning/: test_icm.py  test_ppo.py  test_td.py
tests/memory/: test_trajectory.py
tests/monitoring/: test_event.py  test_event_bus.py
tests/monitoring/callbacks/: test_tensorboard.py
tests/perception/: test_visual.py
tests/reasoning/: test_critic.py  test_dynamics.py
