[build-system]
requires = ["setuptools", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mvi"
version = "0.0.1"
authors = [
    { name="Thomas Hopkins", email="thomas.hopkins.research@gmail.com" }
]
description = "Research on virtual intelligence in Minecraft"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Development Status :: 1 - Planning",
]
dependencies = [
    "PyYAML",
    "dacite",
    "gymnasium",
    "numpy==1.26.4",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
]

[tool.setuptools]
packages = ["mvi"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/thomashopkins32/Minecraft-Virtual-Intelligence"
Issues = "https://github.com/thomashopkins32/Minecraft-Virtual-Intelligence/issues"

[project.scripts]
mvi = "mvi.engine:run"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-mock",
    "ruff",
    "types-PyYAML",
]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = true
exclude = ["**/build"]